--- a/.vim/dein/toml/dein.toml
+++ b/.vim/dein/toml/dein.toml
@@ -1,13 +1,6 @@
 [[plugins]]
 repo = 'Shougo/dein.vim'
 
-# [[plugins]]
-# repo = 'Shougo/vimproc.vim'
-# build = 'make'
-
-# [[plugins]]
-# repo = 'Shougo/unite.vim'
-
 [[plugins]]
 repo = 'scrooloose/nerdtree'
 
@@ -34,19 +27,10 @@ let g:NERDTreeIndicatorMapCustom = {
     \ }
 '''
 
-[[plugins]]
-repo = 'ryanoasis/vim-devicons'
-hook_add = '''
-" フォルダアイコンの表示をON
-let g:WebDevIconsUnicodeDecorateFolderNodes = 1
-'''
-
 # [[plugins]]
-# repo = 'Shougo/vimfiler.vim'
+# repo = 'ryanoasis/vim-devicons'
 # hook_add = '''
-# let g:vimfiler_as_default_explorer = 1
-# noremap <C-X><C-T> :VimFiler -split -simple -winwidth=35 -no-quit<ENTER>
-# autocmd FileType vimfiler nmap <buffer> <CR> <Plug>(vimfiler_expand_or_edit)
+# let g:WebDevIconsUnicodeDecorateFolderNodes = 0
 # '''
 
 [[plugins]]
@@ -60,9 +44,6 @@ vmap <Leader>, <Plug>(caw:zeropos:toggle)
 
 [[plugins]]
 repo = 'nathanaelkane/vim-indent-guides'
-
-#[[plugins]]
-#repo = 'eagletmt/neco-ghc'
 
 [[plugins]]
 repo = 'cespare/vim-toml'
@@ -114,8 +95,8 @@ let g:lightline.active = {
 let g:lightline.tabline = {
       \ 'left': [ [ 'tabs' ] ],
       \ 'right': [ [ 'close' ] ] }
-" let g:lightline.separator    = {'left': '', 'right': ''},
-" let g:lightline.subseparator = {'left': '', 'right': ''},
+" let g:lightline.separator      = {'left': "", 'right': ""}
+" let g:lightline.subseparator = {'left': "", 'right': ""}
 '''
 
 [[plugins]]
