--- a/.vim/dein/toml/dein_lazy.toml
+++ b/.vim/dein/toml/dein_lazy.toml
@@ -9,3 +9,7 @@ on_ft = ['haskell']
 [[plugins]]
 repo = 'okue/vim-haskellConcealPlus'
 on_ft = ['haskell']
+
+[[plugins]]
+repo = 'leafgarland/typescript-vim'
+on_ft = ['typescript']
