--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 .vim/dein/repos/github.com
 .vim/dein/.cache
 .vim/dein/cache_vim
+.vim/dein/cache_vi
+.vim/dein/state_vi.vim
 .vim/dein/state_vim.vim
 .vim/dein/cache_view
 .vim/dein/state_view.vim
