--- a/.vim/dein/toml/dein_lazy.toml
+++ b/.vim/dein/toml/dein_lazy.toml
@@ -6,9 +6,9 @@ on_ft = ['haskell']
 repo = 'okue/hasksyn'
 on_ft = ['haskell']
 
-[[plugins]]
-repo = 'okue/vim-haskellConcealPlus'
-on_ft = ['haskell']
+# [[plugins]]
+# repo = 'okue/vim-haskellConcealPlus'
+# on_ft = ['haskell']
 
 [[plugins]]
 repo = 'leafgarland/typescript-vim'
