modify ale(linter) in vim-toml. too heavy...

--- a/.vim/dein/toml/dein.toml
+++ b/.vim/dein/toml/dein.toml
@@ -53,8 +53,9 @@ repo = 'cespare/vim-toml'
 repo = 'w0rp/ale'
 hook_add = '''
 " linterのタイミング
-let g:ale_lint_on_text_changed = 0
-let g:ale_lint_on_insert_leave = 1
+let g:ale_lint_on_text_changed = 'never'
+let g:ale_lint_on_insert_leave = 0
+let g:ale_lint_on_enter = 0
 
 let g:ale_sign_error   = "\ue20d"
 let g:ale_sign_warning = "\uf41b"
