add elm-vim, change tabsize into 4, add normal-map s to C-w

--- a/.vim/dein/toml/dein.toml
+++ b/.vim/dein/toml/dein.toml
@@ -135,3 +135,9 @@ let g:deoplete#enable_at_startup = 1
 inoremap <expr><TAB>    pumvisible() ? "\<C-n>" : "\<TAB>"
 inoremap <expr><S-TAB>  pumvisible() ? "\<C-p>" : "\<S-TAB>"
 '''
+
+[[plugins]]
+repo = 'elmcast/elm-vim'
+hook_add = '''
+let g:elm_setup_keybindings = 0
+'''
