--- a/.vim/dein/toml/dein.toml
+++ b/.vim/dein/toml/dein.toml
@@ -137,6 +137,39 @@ inoremap <expr><S-TAB>  pumvisible() ? "\<C-p>" : "\<S-TAB>"
 '''
 
 [[plugins]]
+repo = 'autozimu/LanguageClient-neovim'
+rev = 'next'
+build = 'bash install.sh'
+hook_add = '''
+let g:LanguageClient_rootMakers = {
+    \ 'haskell': ['*.cabal', 'stack.yaml'],
+    \ }
+let g:LanguageClient_serverCommands = {
+    \ 'c': [ 'clangd' ],
+    \ 'cpp': [ 'clangd' ],
+    \ 'haskell': ['hie-wrapper'],
+    \ }
+
+function LC_maps()
+  if has_key(g:LanguageClient_serverCommands, &filetype)
+    nnoremap <silent> <F5>  :call LanguageClient_contextMenu()<CR>
+    map <silent> <Leader>lt :call LanguageClient#textDocument_hover()<CR>
+    map <silent> <Leader>lg :call LanguageClient#textDocument_definition()<CR>
+    map <silent> <Leader>lr :call LanguageClient#textDocument_rename()<CR>
+    map <silent> <Leader>lf :call LanguageClient#textDocument_formatting()<CR>
+    map <silent> <Leader>lb :call LanguageClient#textDocument_references()<CR>
+    map <silent> <Leader>la :call LanguageClient#textDocument_codeAction()<CR>
+    map <silent> <Leader>ls :call LanguageClient#textDocument_documentSymbol()<CR>
+  endif
+endfunction
+
+augroup LanguageClientKeyconfig
+  autocmd!
+  autocmd Filetype * call LC_maps()
+augroup END
+'''
+
+[[plugins]]
 repo = 'elmcast/elm-vim'
 hook_add = '''
 let g:elm_setup_keybindings = 0
