--- a/.vim/dein/toml/dein_lazy.toml
+++ b/.vim/dein/toml/dein_lazy.toml
@@ -2,12 +2,8 @@
 repo = 'eagletmt/neco-ghc'
 on_ft = ['haskell']
 
-[[plugins]]
-repo = 'okue/hasksyn'
-on_ft = ['haskell']
-
 # [[plugins]]
-# repo = 'okue/vim-haskellConcealPlus'
+# repo = ''
 # on_ft = ['haskell']
 
 [[plugins]]
