--- a/.vim/dein/toml/dein.toml
+++ b/.vim/dein/toml/dein.toml
@@ -63,24 +63,34 @@ let g:ale_echo_msg_error_str   = 'Error'
 let g:ale_echo_msg_warning_str = 'Warning'
 let g:ale_echo_msg_format = '[%linter%: %severity%] %s'
 let g:ale_sign_column_always = 1
+
 " 一覧表示おおび窓のサイズ
 let g:ale_open_list = 1
 let g:ale_list_window_size = 3
+
 " close window automatically
 augroup CloseLoclistWindowGroup
   autocmd!
   autocmd QuitPre * if empty(&buftype) | lclose | endif
 augroup END
+
 " move by ctrl+j, k
 nmap <silent> <C-j> <Plug>(ale_next_wrap)
 nmap <silent> <C-k> <Plug>(ale_previous_wrap)
+
 highlight ALEErrorSign   ctermfg=9   " ctermbg=15
 highlight ALEWarningSign ctermfg=227 " ctermbg=15
-" highlight clear ALEErrorSign
-" highlight clear ALEWarningSign
+
+let g:ale_completion_enabled = 1
+nnoremap <Leader>g :ALEGoToDefinitionInTab<CR>
+nnoremap <Leader>r :ALEFindReferences<CR>
+nnoremap <Leader>h :ALEHover<CR>
+
 let g:ale_linters = {
-  \ 'haskell': ['hlint'],
-  \ 'c'      : ['gcc']
+  \ 'haskell': [ 'hlint', 'hie-wrapper' ],
+  \ 'c'      : [ 'gcc', 'clangd' ],
+  \ 'cpp'    : [ 'gcc', 'clangd' ],
+  \ 'python' : [ 'pyls' ],
   \ }
 '''
 
@@ -95,8 +105,6 @@ let g:lightline = { 'colorscheme': 'molokai' }
 
 " 要) Cica.ttf https://miiton.github.io/Cica/ 
 " separators for status line, tabline
-" let g:lightline.separator    = {'left': "\ue0b0", 'right': "\ue0b2"}
-" let g:lightline.subseparator = {'left': "\ue0b1", 'right': "\ue0b3"}
 let g:lightline.separator    = {'left': "\ue0c0", 'right': "\ue0c2"}
 let g:lightline.subseparator = {'left': "\ue0c1", 'right': "\ue0c3"}
 
@@ -134,43 +142,4 @@ hook_add = '''
 let g:deoplete#enable_at_startup = 1
 inoremap <expr><TAB>    pumvisible() ? "\<C-n>" : "\<TAB>"
 inoremap <expr><S-TAB>  pumvisible() ? "\<C-p>" : "\<S-TAB>"
-'''
-
-[[plugins]]
-repo = 'autozimu/LanguageClient-neovim'
-rev = 'next'
-build = 'bash install.sh'
-hook_add = '''
-let g:LanguageClient_rootMakers = {
-    \ 'haskell': ['*.cabal', 'stack.yaml'],
-    \ }
-let g:LanguageClient_serverCommands = {
-    \ 'c': [ 'clangd' ],
-    \ 'cpp': [ 'clangd' ],
-    \ 'haskell': ['hie-wrapper'],
-    \ }
-
-function LC_maps()
-  if has_key(g:LanguageClient_serverCommands, &filetype)
-    nnoremap <silent> <F5>  :call LanguageClient_contextMenu()<CR>
-    map <silent> <Leader>lt :call LanguageClient#textDocument_hover()<CR>
-    map <silent> <Leader>lg :call LanguageClient#textDocument_definition()<CR>
-    map <silent> <Leader>lr :call LanguageClient#textDocument_rename()<CR>
-    map <silent> <Leader>lf :call LanguageClient#textDocument_formatting()<CR>
-    map <silent> <Leader>lb :call LanguageClient#textDocument_references()<CR>
-    map <silent> <Leader>la :call LanguageClient#textDocument_codeAction()<CR>
-    map <silent> <Leader>ls :call LanguageClient#textDocument_documentSymbol()<CR>
-  endif
-endfunction
-
-augroup LanguageClientKeyconfig
-  autocmd!
-  autocmd Filetype * call LC_maps()
-augroup END
-'''
-
-[[plugins]]
-repo = 'elmcast/elm-vim'
-hook_add = '''
-let g:elm_setup_keybindings = 0
 '''
