--- a/.ideavimrc
+++ b/.ideavimrc
@@ -41,3 +41,10 @@ nnoremap S :action SearchEverywhere<CR>
 
 nnoremap == :action ReformatCode<CR>
 vnoremap == :action ReformatCode<CR>
+
+" MEMO: from https://tikasan.hatenablog.com/entry/2018/07/30/110000
+" Cmd+E: 直近のファイル一覧
+" Cmd+1: ナビゲーションバーの表示; 矢印とEnterで移動と開くができる
+"
+" TIPS:
+" ctrl+j, k を up, down にマッピングすると便利
