--- a/.ideavimrc
+++ b/.ideavimrc
@@ -49,6 +49,7 @@ vnoremap == :action ReformatCode<CR>
 " MEMO: from https://tikasan.hatenablog.com/entry/2018/07/30/110000
 " Cmd+E: 直近のファイル一覧
 " Cmd+1: ナビゲーションバーの表示; 矢印とEnterで移動と開くができる
+" Cmd+'+', '-': Fold/Unfold code lines
 "
 " TIPS:
 " ctrl+j, k を up, down にマッピングすると便利
