--- a/.ideavimrc
+++ b/.ideavimrc
@@ -48,17 +48,17 @@ nnoremap == :action ReformatCode<CR>
 vnoremap == :action ReformatCode<CR>
 
 " 参考
-" https://ikenox.info/blog/ideavim-introduction/ 
+" https://ikenox.info/blog/ideavim-introduction 
 " https://qiita.com/sei40kr/items/09e7e92eb7686f9b5950 
+" https://tikasan.hatenablog.com/entry/2018/07/30/110000 
 
-" MEMO: from https://tikasan.hatenablog.com/entry/2018/07/30/110000 
+" MEMO:
 " Cmd+E: 直近のファイル一覧
 " Cmd+1: ナビゲーションバーの表示; 矢印とEnterで移動と開くができる
 " Cmd+'+', '-': Fold/Unfold code lines
 
-" TIPS:
-" ctrl+j, k を Up, Down にマッピングすると便利
-
 " XXX:
 " Run   -> Opt+R
 " Debug -> Opt+D
+" Up    -> Ctrl+J
+" Down  -> Ctrl+K
