--- a/.inputrc
+++ b/.inputrc
@@ -1,1 +1,22 @@
 set completion-ignore-case On
+
+$if bash
+  set editing-mode vi
+
+  # Install bash ^4
+  set show-mode-in-prompt on
+  set vi-cmd-mode-string "\1\e[37;41;1m\2 N \1\e[0m\2"
+  set vi-ins-mode-string "\1\e[37;42;1m\2 I \1\e[0m\2"
+
+  set keymap vi-command
+  "v": ""
+  "\ev": edit-and-execute-command
+  "\C-k": history-search-backward
+  "\C-j": history-search-forward
+
+  set keymap vi-insert
+  "\ev": edit-and-execute-command
+  "\C-l": clear-screen
+  "\C-k": history-search-backward
+  "\C-j": history-search-forward
+$endif
