--- a/.ideavimrc
+++ b/.ideavimrc
@@ -61,21 +61,13 @@ vnoremap == :action ReformatCode<CR>
 " https://qiita.com/sei40kr/items/09e7e92eb7686f9b5950 
 " https://tikasan.hatenablog.com/entry/2018/07/30/110000 
 
-" MEMO:
-" Cmd+E: 直近のファイル一覧
-" Cmd+1: ナビゲーションバーの表示; 矢印とEnterで移動と開くができる
-" Cmd+'+', '-': Fold/Unfold code lines
-
 " XXX:
 " Run   -> Opt+R
 " Debug -> Opt+D
-"
-" Up    -> Ctrl+J
-" Down  -> Ctrl+K
-"
-" Settings for Code Complete
-" Choose Lookup Item -> Tab
-" Choose Lookup Item Replace -> Enter
+" Up    -> Ctrl+K
+" Down  -> Ctrl+J
+" Settings for Code Complete > Choose Lookup Item -> Tab
+" Settings for Code Complete > Choose Lookup Item Replace -> Enter
 "
 " Vim Emulation Setting
 " Ctrl+T: use IDE command (refactor this)
