--- a/.inputrc
+++ b/.inputrc
@@ -8,6 +8,7 @@ $if bash
   set vi-cmd-mode-string "\1\e[37;41;1m\2 N \1\e[0m\2"
   set vi-ins-mode-string "\1\e[37;42;1m\2 I \1\e[0m\2"
 
+  # `\e` means escape.
   set keymap vi-command
   "gg": "0"
   "\ev": edit-and-execute-command
